1998-08-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gtkhex.c (draw_shadow): set backing pixmap and clear
	window area of the whole widget. this makes it look prettier
	with pixmap themes ;)
	
1998-08-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c (create_prefs_dialog), main.c (main), ghex.h:
	honor MDI preferences stuff just implemented in gnome-mdi.
	
1998-07-27  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c, hex-document.c: use more GNOME_STOCK items.
	
1998-07-26  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c (create_prefs_dialog): use gtk_notebook_append_page() instead
	of gnome_property_box_append_page().
	
1998-07-06  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* main.c, ui.c: changed some things because of GnomeMDI
	changes.

1998-07-02  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c: changed document menu callbacks because of
	changes in GnomeMDI.
	* callbacks.c (get_search_string): fixed a small bug with capital
	letters in hex values.
	
1998-07-01  Nuno Ferreira  <nmrf@rnl.ist.utl.pt>

	* ghex.desktop: Added Portuguese translation.

1998-06-28  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* gnome-support.c, main.c: now ghex does proper SM. currently
	the only state it saves and restores are open files.
	
1998-06-23  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* callbacks.c: let conversion callback handle erroneus values.
	* ghex.h, ui.c : minor changes to Converter structure and
	create_converter() function.
	
1998-06-18  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* hex-document.c: put "Group Data As" menu back to document's
	menu structure.
	* callbacks.[ch]: moved callbacks for document's menuitems to
	hex-document.c.

1998-06-17  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>

	* ui.c: added create_converter() fucntion that creates a
	base conversion dialog.
	* callbacks.[ch]: some stuff for base conversion.
	
1998-06-15  Jaka Mocnik  <jaka.mocnik@kiss.uni-lj.si>
